2010-04-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (REAL_CFLAGS, CFLAGS): Restore -g for gcc.

2010-04-22  Miles Bader <miles@gnu.org>

	* configure.in: Get rid of "unix" pre-defined macro when
	preprocessing Makefile.  (Bug#5857)

2010-04-21  Andreas Schwab  <schwab@linux-m68k.org>

	Avoid non-portable shell command negation
	* configure.in: Revert last change.

2010-04-21  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in: Change "if test ! -f" to "if ! test -f".

2010-04-21  Glenn Morris  <rgm@gnu.org>

	* configure.in (LIBSELINUX_LIBS): Always substitute in Makefiles.
	(GTK_OBJ, DBUS_OBJ, LIBXSM, XMENU_OBJ, XOBJ): New output variables.

2010-04-21  Karel Klíč  <kklic@redhat.com>

	* configure.in: New option: --with(out)-selinux, on by default.
	Set HAVE_LIBSELINUX if we find libselinux, and substitute
	LIBSELINUX_LIBS in Makefiles.

2010-04-01  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in: Remove all references to LIBX11_SYSTEM.

2010-03-30  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in: Remove all references to C_DEBUG_SWITCH.

2010-03-27  Eli Zaretskii  <eliz@gnu.org>

	* config.bat <lib-src>: Edit out lines that begin with several #
	characters.

2010-03-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in: Remove support for old UNIX System V systems and
	for Unixware on non-x86 machines.

	* configure.in:	Remove support for Solaris on PPC and for old versions.

	* configure.in: Remove non-working lynxos port.

2010-03-19  Dan Nicolaescu  <dann@ics.uci.edu>

	* .dir-locals.el (c-mode): Turn on whitespace-mode for diff-mode.

2010-03-19  Glenn Morris  <rgm@gnu.org>

	* configure.in (HAVE_LIBNCURSES): Add a description to make autoheader
	happy.

2010-03-18  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in: Check for tputs and friends, abort if not
	found (bug#5735).

2010-03-18  Glenn Morris  <rgm@gnu.org>

	* configure.in (--with-x-toolkit): In the help text, say which options
	are synonyms.
